--- a/GraphConnector.Library/GraphConnector.Library.csproj
+++ b/GraphConnector.Library/GraphConnector.Library.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Graph" Version="5.52.0" />
     <PackageReference Include="Azure.Identity" Version="1.12.0" />
+    <PackageReference Include="System.ServiceModel.Syndication" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
