--- a/GraphConnector.Service.Queue/GraphConnector.Service.Queue.csproj
+++ b/GraphConnector.Service.Queue/GraphConnector.Service.Queue.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.20.1" />
     <PackageReference Include="Aspire.RabbitMQ.Client" Version="8.1.0" />
+    <PackageReference Include="System.ServiceModel.Syndication" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
