--- a/GraphConnector.UI/appsettings.json
+++ b/GraphConnector.UI/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "QueueApiUrl": "https://graphconnector-api-queue/"
 }
