--- a/GraphConnectorAspire.AppHost/GraphConnectorAspire.AppHost.csproj
+++ b/GraphConnectorAspire.AppHost/GraphConnectorAspire.AppHost.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -17,6 +17,7 @@
   <ItemGroup>
     <ProjectReference Include="..\GraphConnector.Api.Queue\GraphConnector.Api.Queue.csproj" />
     <ProjectReference Include="..\GraphConnector.Service.Queue\GraphConnector.Service.Queue.csproj" />
+    <ProjectReference Include="..\GraphConnector.UI\GraphConnector.UI.csproj" />
   </ItemGroup>
 
 </Project>
